Fix overflow

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
   font-size: 16px;
 }
 
+*, ::before, ::after {
+  box-sizing: border-box;
+}
+
 html {
   background-color: #000;
   color: #7a7875;
@@ -52,6 +56,13 @@ footer {
 .menu {
   min-width: 250px;
   margin: 4em 0;
+}
+
+.menu,
+label[for="menu-toggle"] {
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  background: #000000dd;
 }
 
 /* Style <ul> and <li> as Tree View */
@@ -424,17 +435,13 @@ and (max-width: 900px) {
     padding: 0 1em;
   }
 
+  .index, .content {
+    min-width: initial;
+  }
+
   footer {
     padding: 0 0.5em;
     display: flex;
     justify-content: center;
-  }
-}
-
-@supports (backdrop-filter: blur(10px)) {
-  .menu,
-  label[for="menu-toggle"] {
-    backdrop-filter: blur(10px);
-    background: #000000dd;
   }
 }
